add some more quiz; add config; simplify quiz title

--- a/www/main.css
+++ b/www/main.css
@@ -21,7 +21,7 @@ body {
 
 section, main, header, footer {
     margin: 1em auto;
-    width: 40em;
+    width: 21cm;
     max-width: 100%;
     padding: 0 8pt;
 }
